--- a/templates/anims/accordeoniste-mariages.html.twig
+++ b/templates/anims/accordeoniste-mariages.html.twig
@@ -103,7 +103,7 @@
 
 			<h3 class="section-title section-title--smaller">Jazz manouche pour votre mariage</h3>
 
-			<img src="img/triomanouche.jpg" class="img-fluid" style="display: block; width: 80%; margin: auto;">
+			<img src="img/trio-jazz-manouche.jpg" alt="Trio jazz manouche pour mariage" class="img-fluid" style="display: block; width: 80%; margin: auto;">
 
 			<p style="margin-top: 20px;">
 				Pour une musique d'ambiance réussie, le jazz manouche est sans contexte le répertoire idéal ! Style virtuose par excellence, les morceaux altèrnent entre balades langoureuses et <i>swing</i> très rapide ; toujours en toute discrétion et dans l'élégance. <br>
