--- a/templates/bands/ruelamome.html.twig
+++ b/templates/bands/ruelamome.html.twig
@@ -86,7 +86,21 @@
                 </ul>
             </p>
 
-            <a href="{{ path('collaborations') }}" class="btn btn-primary" style="margin-top: 35px;">Retour</a>
+			<h2 class="section-title section-title--small">Duo accordéon / voix : Les Titis ParisPiaf</h2>
+
+			<p>
+				Avec Cid Marquis, nous proposons une version en duo accordéon / voix du spectacle ; à destination de vos concerts et événements, un répertoire d'1h15 autour des chansons d'Edith Piaf dans une formule intimiste !
+			</p>
+
+			<div class="row justify-content-center" style="margin-bottom: 20px;">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+            <a href="{{ path('collaborations') }}" class="btn btn-primary" style="margin-top: 35px;">Retour aux collaborations</a>
         </div>
     </section>
 {% endblock %}
