--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -112,7 +112,7 @@
 
                             <div class="dropdown-menu" aria-labelledby="about">
                                 <a class="dropdown-item" href="{{ path('bio') }}">Biographie</a>
-                                <a class="dropdown-item" href="{{ path('collaborations') }}" rel="nofollow">Collaborations artistiques</a>
+                                <a class="dropdown-item" href="{{ path('collaborations') }}">Collaborations artistiques</a>
                             </div>
                         </li>
 
@@ -176,12 +176,13 @@
                     <a title="Retrouvez moi sur Facebook" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank" ><i class="fab fa-facebook"></i></a>
                     <a title="Retrouvez moi sur Youtube" style="font-size: 24px; color: #FFFFFF; margin-right: 10px;" href="https://www.youtube.com/channel/UCTHC327qYeB34ri8Fgzubjw" target="_blank"><i class="fab fa-youtube"></i></a>
                     <a title="Retrouvez moi sur Soundcloud" style="font-size: 24px; color: #FFFFFF;" href="https://soundcloud.com/j-r-my-dutheil/" target="_blank"><i class="fab fa-soundcloud"></i></a>
+                    <a title="Retrouvez moi sur LiveTonight" style="" href="https://livetonight-dot-yamm-track.appspot.com/Redirect?ukey=1nGcsuKOZ27OLxDe8NWFrLO7Wfs4w5z_JPHRm1X_ZDB8-993220127&key=YAMMID-22322822&link=https%3A%2F%2Fwww.livetonight.fr%2Fgroupe-musique-dj%2F3484-jeremy-dutheil" target="_blank"><img style="height: 20px; vertical-align: -2px; margin-left: 10px;" src="img/livetonight.png"></a>
                 </p>
 
                 <hr style="background-color: #ffffff;">
 
                 <p class="text-center" style="font-size: 14px; ">
-                    <a style="color: #FFFFFF;" href="{{ path('mentions_legales') }}" rel="nofollow">Mentions légales</a> - <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}" style="color: #ffffff;">Groupe de jazz manouche pour votre mariage</a> - <a href="{{ path('accordeoniste_soiree') }}" style="color: #ffffff;">Accordéoniste pour votre soirée</a> - <a href="{{ path('animations') }}" style="color: #ffffff;">Toutes les animations musicales</a><br>
+                    <a style="color: #FFFFFF;" href="{{ path('mentions_legales') }}">Mentions légales</a> - <a href="{{ path('groupe_jazz_manouche_mariage_paris') }}" style="color: #ffffff;">Groupe de jazz manouche pour votre mariage</a> - <a href="{{ path('accordeoniste_soiree') }}" style="color: #ffffff;">Accordéoniste pour votre soirée</a> - <a href="{{ path('animations') }}" style="color: #ffffff;">Toutes les animations musicales</a><br>
                     <!--- <br>
                     Jérémy fait confiance à <a href="http://www.monsieuraccordeon.com" style="color: #ffffff;" target="_blank" title="Réparation / Accordage accordéons en Ile de France">Monsieur Accordéon</a> pour l'entretien de ses accordéons.
                 --></p>
