--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
 	<section class="flash flash--limited">
 		<div class="flash-item">
-			<img src="img/triomanouche.jpg" alt="" class="flash-item__background flash-item__background--groupes" style="top: -50%;">
+			<img src="img/trio-jazz-manouche.jpg" alt="Trio jazz manouche - Accordéon, Guitare, Contrebasse" class="flash-item__background flash-item__background--groupes" style="top: -50%;">
 		</div>
 	</section>
 
@@ -30,7 +30,7 @@
 			</p>
 
             <p>
-                Retrouvez ci-dessous quelques exemples de prestations que nous pouvons vous proposer, classées par style musical. N'hésitez pas à <a href="{{ path('contact') }}">nous contacter</a> pour plus d'informations.
+                Retrouvez ci-dessous quelques exemples de prestations que nous pouvons vous proposer, classées par style musical. N'hésitez pas à nous contacter pour plus d'informations.
             </p>
 
 			<h2 class="section-title section-title--small" style="margin-top: 15px;">Jazz manouche</h2>
