--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -340,7 +340,7 @@
 
 			<p>
 				<strong>Quelles sont les démarches administratives ?</strong> <br>
-				Notre mode de fonctionnement préféré est <strong>le Guso</strong> ; il s'agit d'un service gratuit mis en place par l'état, afin de permettre l'embauche de musiciens de manière simplifiée. Nous vous accompagnons tout au long du processus, qui est très facile. Plus d'informations sur l'article suivant : <a href="https://www.jeremy-dutheil.fr/blog/comment-embaucher-un-musicien/">Comment embaucher un musicien ?</a> <br>
+				<a href="https://www.jeremy-dutheil.fr/blog/devenir-intermittent-du-spectacle/" target="_blank">Intermittents du spectacle</a>, notre mode de fonctionnement préféré est <strong>le Guso</strong> ; il s'agit d'un service gratuit mis en place par l'état, afin de permettre l'embauche de musiciens de manière simplifiée. Nous vous accompagnons tout au long du processus, qui est très facile. Plus d'informations sur l'article suivant : <a href="https://www.jeremy-dutheil.fr/blog/comment-embaucher-un-musicien/">Comment embaucher un musicien ?</a> <br>
 				Si vous ne pouvez (ou ne souhaitez) pas passer par le Guso, nous pouvons établir un contrat et une facture par l'intermédiaire d'une boîte de production. Dans ce mode de fonctionnement, l'intermédiaire prend un pourcentage et la TVA est également appliquée ; nous devrons donc facturer 17% de frais supplémentaires.
 			</p>
 
