--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -30,7 +30,7 @@
 			</p>
 
             <p>
-                Retrouvez ci-dessous quelques exemples de prestations que nous pouvons vous proposer, classées par style musical. N'hésitez pas à nous contacter pour plus d'informations.
+                Retrouvez ci-dessous quelques exemples de prestations que nous pouvons vous proposer, classées par style musical. N'hésitez pas à nous contacter pour plus d'informations. Si vous cherchez plutôt un musicien en solo, vous pouvez consulter la page suivante : <a href="{{ path('accordeoniste_soiree' ) }}">accordéoniste pour l'animation musicale de votre soirée</a>.
             </p>
 
 			<h2 class="section-title section-title--small" style="margin-top: 15px;">Jazz manouche</h2>
