--- a/templates/pages/accordeoniste_soiree.html.twig
+++ b/templates/pages/accordeoniste_soiree.html.twig
@@ -20,7 +20,7 @@
 			<h1 class="section-title">Accordéoniste pour animer votre soirée</h1>
 
             <p>
-                Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? Mariage, fête entre amis sur le thème "<i>Guinguette</i>", anniversaire, cocktail d'entreprise.. Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation d'accueillir un <strong>groupe de musique</strong> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
+                Vous êtes à la recherche d'un <strong>accordéoniste pour animer votre soirée</strong> ? Mariage, fête entre amis sur le <a href="{{ path('guinguette') }}">thème "<i>Guinguette</i>"</a>, anniversaire, cocktail d'entreprise.. Les occasions sont nombreuses pour inviter un musicien, et l'accordéon s'adaptera facilement à tout type d'événement. Même si la tentation d'accueillir un <strong>groupe de musique</strong> est souvent grande, les conditions ne sont parfois pas réunies pour pouvoir le faire (taille du lieu, considérations techniques, budget...).
             </p>
 
             <p>
@@ -164,7 +164,7 @@
             </p>
 
             <p>
-                Pour démarrer une première discussion et obtenir plus de renseignements, n'hésitez pas à <a href="{{ path('contact') }}">me contacter</a> ; vous pouvez également consulter la page des <a href="{{ path('animations') }}">animations musicales</a> pour découvrir d'autres possibilités (notamment avec un <a href="{{ path('manouche') }}">groupe de jazz manouche</a>).
+                Pour démarrer une première discussion et obtenir plus de renseignements, n'hésitez pas à me contacter ; vous pouvez également consulter la page des <a href="{{ path('animations') }}">animations musicales</a> pour découvrir d'autres possibilités (notamment avec un <a href="{{ path('manouche') }}">groupe de jazz manouche</a>).
             </p>
         </div>
     </section>
