--- a/templates/anims/index.html.twig
+++ b/templates/anims/index.html.twig
@@ -248,7 +248,7 @@
 			</div>
 
 			<p>
-				<a href="{{ path('marie') }}" class="btn btn-primary">Plus d'informations</a>
+				<a href="{{ path('collaborations') }}#marie" class="btn btn-primary">Plus d'informations</a>
 			</p>
 
 			<h2 class="section-title section-title--small" style="margin-top: 20px;">Votre événement sur mesure</h2>
