--- a/templates/pages/collaborations.html.twig
+++ b/templates/pages/collaborations.html.twig
@@ -46,7 +46,7 @@
 					</p>
 
 					<p>
-						<a href="{{ path('mime') }}" class="btn btn-primary">En savoir plus</a>
+						<a href="#mime" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
 
@@ -62,7 +62,7 @@
 					</p>
 
 					<p>
-						<a href="{{ path('marie') }}" class="btn btn-primary">En savoir plus</a>
+						<a href="#marie" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
 
@@ -78,7 +78,7 @@
 					</p>
 
 					<p>
-						<a href="{{ path('ruelamome') }}" class="btn btn-primary">En savoir plus</a>
+						<a href="#ruelamome" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
 
@@ -94,7 +94,7 @@
 					</p>
 
 					<p>
-						<a href="{{ path('madjid') }}" class="btn btn-primary">En savoir plus</a>
+						<a href="#madjid" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
 
@@ -110,7 +110,7 @@
 					</p>
 
 					<p>
-						<a href="{{ path('marquise' )}}" class="btn btn-primary">En savoir plus</a>
+						<a href="#marquise" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
 
@@ -126,7 +126,7 @@
 					</p>
 
 					<p>
-						<a href="{{ path('elena') }}" class="btn btn-primary">En savoir plus</a>
+						<a href="#elena" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
 
@@ -142,12 +142,248 @@
 					</p>
 
 					<p>
-						<a href="{{ path('fdf') }}" class="btn btn-primary">En savoir plus</a>
+						<a href="#fdf" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
 			</div>
 
+			<h2 id="mime" class="section-title">MimE</h1>
 
+			<p>
+				<a href="https://www.facebook.com/REMI.MIME" class="text-link social-link" target="_blank"><i class="fab fa-facebook"></i></a>
+				<a href="https://www.youtube.com/channel/UCWBiotlqnlEppd7P-eYrW_Q" class="text-link social-link" target="_blank"><i class="fab fa-youtube"></i></a>
+			</p>
+
+			<p>
+				MimE c'est de la chanson offerte sans papier cadeaux, des airs débraillés chuchotés à l'oreille des copains ou hurlés sous la lune, des chansons originales entrecoupées de reprises d' Allain leprest, de Bernard Dimey et de poèmes de Nazim Hikmet, le tout servis par un trio aussi improbable qu' accidentel : un Orgue Hammond, une Batterie et un Accordéon. Ah pis y a un Chanteur aussi, enfin, il chante pas toujours...enfin... vous verrez bien !
+			</p>
+
+			<p>
+				Une formule en <strong>duo accordéon / voix</strong> est également disponible !
+			</p>
+
+			<div class="row">
+				<div class="col-sm-6">
+					<iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/364596170&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+				</div>
+
+				<div class="col-sm-6">
+					<iframe width="100%" height="300" src="https://www.youtube.com/embed/3myHtS2ZYPo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</div>
+			</div>
+
+			<h2 id="marie" class="section-title" style="margin-top: 20px;">Marie Pétrolette</h1>
+
+			<p>
+				<a href="https://www.facebook.com/Marie-P%C3%A9trolette-473387396102982/" class="text-link social-link" target="_blank"><i class="fab fa-facebook"></i></a>
+				<a href="https://marie-petrolette.jimdo.com/" class="text-link social-link" target="_blank"><i class="fa fa-globe"></i></a>
+			</p>
+
+			<p>
+				[...] Sans quitter l’univers féministe et féminin de ses débuts, les chansons de Marie Pétrolette nous parlent de la vie d’une jeune femme d’aujourd’hui dans une ville moderne. Alternant l’humour grinçant et des airs plus mélancoliques, elles se demandent, et nous demandent, si la peur d’être seul.e ne fausse pas toutes nos actions et si le besoin d’être aimé.e n’est pas le dangereux moteur qui nous fait foncer dans le vide. Sans jamais basculer dans le pathos, soutenues par une musique vivante et par des sentiments portés par les facettes de sa voix, ces chansons nous parlent surtout de nous-mêmes.
+			</p>
+
+			<div class="row">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/o91BGe2Xaac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+
+				<div class="col-md-6">
+					<iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/363531098&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+				</div>
+			</div>
+
+			<p style="margin-top: 20px;">
+				Avec Marie Pétrolette, nous proposons deux concepts différents, à chaque fois en duo accordéon / voix. Nous nous produisons tout d'abord dans le cadre public, avec un répertoire essentiellement axé sur des compositions originales. Mais nous proposons également pour vos événements un répertoire "Montmartre", les grands classiques de la chanson française (Piaf, Brel, Aznavour, Ferré, ...). Nous pouvons jouer l'un ou l'autre de ces répertoires selon vos préférences, ou même un mix des deux !
+			</p>
+
+			<h2 id="ruelamome" class="section-title" style="margin-top: 20px;">Rue la Môme</h1>
+
+            <p>
+				<a href="https://www.facebook.com/CidetKris/" class="text-link social-link" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.youtube.com/channel/UCii-DeR-F5xFCjN0vHr7uwQ" class="text-link social-link" target="_blank"><i class="fab fa-youtube"></i></a>
+				<a href="http://www.ruelamome.fr" class="text-link social-link" target="_blank"><i class="fa fa-globe"></i></a>
+			</p>
+
+            <p>
+                Rue la Môme est un spectacle dédié à Edith Piaf, qui revisite ses plus grands succès mais aussi certains trésors méconnus. Ce trio de musiciens professionnels et talenteux, portés par l'étonnante Cid au chant, vous fera revivre différentes périodes de la vie de La Môme, de ses débuts dans la rue à la consécration à l'Olympia. L'accordéon et le violon font place égale dans le spectacle, la guitare change de main et le piano s'invite sur certain morceaux toujours pour sublimer une incroyable voix. L'imitation n'est pas cherchée, mais le décor est là sans aucun doute ; installez vous confortablement, et laissez vous embarquer pour un retour dans le temps !
+            </p>
+
+			<div class="row justify-content-center">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+            			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_nUkmR_LQNo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+            <p>
+                Quelques morceaux que vous entendrez :
+                <ul>
+                    <li>
+                        La Foule
+                    </li>
+
+                    <li>
+                        La vie en rose
+                    </li>
+
+                    <li>
+                        L'accordéoniste
+                    </li>
+
+                    <li>
+                        Sous le ciel de Paris
+                    </li>
+
+                    <li>
+                        Les amants d'un jour
+                    </li>
+
+                    <li>
+                        L'homme à la moto
+                    </li>
+
+                    <li>
+                        L'hymne à l'amour
+                    </li>
+
+                    <li>
+                        Milord
+                    </li>
+
+                    <li>
+                        Mon apéro
+                    </li>
+
+                    <li>
+                        Mon dieu
+                    </li>
+
+                    <li>
+                        Mon manège à moi
+                    </li>
+
+                    <li>
+                        ...
+                    </li>
+                </ul>
+            </p>
+
+			<h2 class="section-title section-title--small">Duo accordéon / voix : Les Titis ParisPiaf</h2>
+
+			<p>
+				Avec Cid Marquis, nous proposons une version en duo accordéon / voix du spectacle ; à destination de vos concerts et événements, un répertoire d'1h15 autour des chansons d'Edith Piaf dans une formule intimiste !
+			</p>
+
+			<div class="row justify-content-center" style="margin-bottom: 20px;">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/gtqG5br0M60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+
+			<h2 id="madjid" class="section-title" style="margin-top: 20px;">Madjid et Yano Tët</h1>
+
+			<p>
+				<a href="https://www.facebook.com/madjidelectronlibre/" class="text-link social-link" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.youtube.com/channel/UCRnPscTzfPCkJxCef_B9QsA" class="text-link social-link" target="_blank"><i class="fab fa-youtube"></i></a>
+			</p>
+
+
+            <p>
+                Tantôt rebelle, tantôt bohème YANO TËT évolue dans un univers world. Originaire d’Ivry-sur Seine, le groupe est porté part Madjid Djeddi. Chanteur à la route bien tracée d'un enfant qui sort des rangs, il nous transporte avec des textes tranchants et sincères. Entre couscous et pot-au-feu, YANO TËT cuisine en chanson une sauce Rock Orientale qui dégage une énergie hors du commun.
+            </p>
+
+			<div class="row justify-content-center">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/PaksJgIHHRk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h2 id="marquise" class="section-title" style="margin-top: 20px;">La Marquise</h1>
+
+			<p>
+				<a href="https://www.facebook.com/LA-MARQUISE-36246416221/" class="text-link social-link" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.youtube.com/channel/UCxMuztzrLJG9LB_sDl7qbLQ" class="text-link social-link" target="_blank"><i class="fab fa-youtube"></i></a>
+                <a href="http://www.lesitedelamarquise.com/" class="text-link social-link" target="_blank"><i class="fas fa-globe"></i></a>
+			</p>
+
+            <p>
+                Pas toujours facile à suivre cette Marquise là ! Car si le groupe est né à Paris il y a une dizaine d’années, il a suivi les déplacements de son fondateur/leader – Daniel Ferrat – venu vivre à Marseille au début des années 2000 avant de décider, sans doute pour rester dans le rythme, de vivre entre Paris et …Marseille !
+            </p>
+
+            <p>
+                Ce qui tombe plutôt bien pour un groupe qui a choisi la scène (près de 500 concerts à ce jour) comme axe principal de son développement. Ce sera donc 15 années de cafés-concerts, de salles, de festivals et des premières parties à la pelle (Cabrel, Maurane, Arthur H, Kent, Raoul Petite…).
+                <br>Une Marquise saltimbanque donc ! Qui, pour marquer ses dix ans de scène opte pour le format duo à l’énergie et la créativité démultipliées : duo de choc à deux voix qui envoient une chanson swing, funky, reggae souvent drôle, faussement légère. Avec en prime des reprises « sauce Marquise » qui valent le détour !
+            </p>
+
+			<div class="row justify-content-center">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+            			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/qY6eJWCQSGs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h2 id="elena" class="section-title" style="margin-top: 20px;">Elena Josse</h1>
+
+			<p>
+				"Figure marquante du Théâtre du Fil, Eléna Josse a croisé nos chemins comme souvent par hasard, par-dessus le tumulte des villes. Telle une fleur dans le béton, sa voix perçait la foule bruyante et nous transmettait un florilège de chansons inattendues, venues des générations précédentes et que souvent personne ne connaissait. [...] j’ai parfois l’impression de m’entendre chanter comme j’aurai du chanter quand j’avais sa jeunesse." Christian Paccoud
+			</p>
+
+			<div class="row justify-content-center">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+						<iframe class="embed-responsive-item" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/419163881&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+					</div>
+				</div>
+			</div>
+
+			<h2 id="fdf" class="section-title" style="margin-top: 20px;">Les Fils de Flûte</h1>
+
+			<p>
+				<a href="https://www.facebook.com/lesfilsdeflute.groupe/" class="text-link social-link" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.youtube.com/channel/UCobgQojoJK6HruFeocmEAVQ" class="text-link social-link" target="_blank"><i class="fab fa-youtube"></i></a>
+			</p>
+
+
+            <p>
+                "En équilibre dans leur univers qui n’flûte pas rond, entre poésie, humour et histoires folles, ces troubadours vous invitent à prendre le large et à les suivre dans leur voyage musical. Un accordéon, une contrebasse, une guitare et une batterie mènent leur barque au fil des chansons, naviguant sur le flow de leurs voix ; ils vous proposent une croisière de bonne humeur. Juste le temps d’prendre son temps, de voyager en dansant, et d’profiter des mots. Embarquez m’sieurs dames !"
+            </p>
+
+			<div class="row justify-content-center">
+				<div class="col-md-6">
+					<div class="embed-responsive embed-responsive-16by9">
+            			<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wcG5FxfCw2c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+
+            <p>
+                Les Fils de Flûte, c'est la rencontre de trois étudiants en école d'ingénieur, mais surtout de trois passionnés de musique ! Les influences sont variées, mais le style du groupe se résume bien par l'appellation "musique de rue" : des textes à déguster, une musique ensoleillée, et beaucoup de bonne humeur ! Très inspirés par des artistes tels que La Rue Kétanou, Les Ogres de Barback, Yves Jamait, Les Têtes Raides… Les premières compositions sont écrites tout en travaillant sur des reprises du même style. De concerts en concerts, Les Fils de Flûte se font connaître dans le nord et la Belgique et partagent quelques jolies scènes (The Inspector Cluzo, La Belle Bleue, Guerilla Frasca).
+            </p>
+
+            <p>
+                A l’été 2011 sort le 1er EP, fait maison : "C'est pas du pipeau !"
+            </p>
+
+            <p>
+            Après une première tournée d’été principalement en spectacles de rue (Paris, La Rochelle, Bordeaux, Lyon...), les concerts reprennent de plus belle et de nombreuses dates en festivals sont au rendez-vous : Nomad, Berzyk, Le Mix Up (avec Les Têtes Raides, Danakil et Hubert-Felix Thiefaine)…
+Le premier album "Sur notre fil", toujours autoproduit, sort fin 2012, 14 titres oscillants entre poésie, humour et histoires folles. S’en suivent deux années de concerts, entre festivals, bars ou tout type d'évènement convivial ; on notera en particulier Agitation Générale avec Les Ogres de Barback, l'inauguration du Tigre de Compiègne, ou encore La Fête de l'Humain D'abord avec Hk & Les Saltimbanks, Tournée Générale, Flavia Coelho, ...
+            </p>
+
+            <p>
+                En 2015 la famille s’agrandie : la section rythmique s'enrichit d'une batterie et d’un nouveau contrebassiste. Les concerts se feront désormais à 4 ou 5 sur scène. Une nouvelle formule, un nouveau spectacle et toujours plus d'envie !
+            </p>
+
+            <img class="img-fluid" src="img/fdf2.jpg" alt="Les Fils de Flûte sur scène !">
 		</div>
 		<!-- /.container -->
 	</section>
