--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -75,7 +75,7 @@
 					</div>
 
 					<p class="text-center">
-						<i>Avec Cid Marquis, nous proposons un répertoire d'1h30 en hommage à Edith Piaf ; <a href="{{ path('ruelamome') }}">plus d'informations ici</a></i>
+						<i>Avec Cid Marquis, nous proposons un répertoire d'1h30 en hommage à Edith Piaf ; <a href="{{ path('collaborations') }}#ruelamome">plus d'informations ici</a></i>
 					</p>
 				</div>
 				<div class="col-md-6">
