--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -43,7 +43,7 @@
 			</p>
 
 			<p>
-				Trouver un <strong>groupe de musique</strong> peut se révéler une tâche chronophage ; à l'heure d'internet, les propositions sont nombreuses et il est difficile de faire un choix. En tant que professionnels expérimentés, notre but est de vous <strong>faciliter</strong> toutes ces démarches ; nous pouvons prendre en charge l'animation musicale de votre soirée de A à Z. Nous vous proposons ici différentes formules types (toutes avec un <a href="{{ path('accordeon_jazz_manouche') }}">accordéoniste jazz manouche</a> bien sûr !), que vous pouvez modifier à votre guise pour créer votre <strong>orchestre jazz manouche</strong> sur mesure. Bien entendu, nous vous conseillerons en fonction du lieu que vous avez choisi, du nombre de personnes attendues à votre événement et de votre budget.
+				Trouver un <a href="{{ path('musiciens_soirees') }}">groupe de musique</a> peut se révéler une tâche chronophage ; à l'heure d'internet, les propositions sont nombreuses et il est difficile de faire un choix. En tant que professionnels expérimentés, notre but est de vous <strong>faciliter</strong> toutes ces démarches ; nous pouvons prendre en charge l'animation musicale de votre soirée de A à Z. Nous vous proposons ici différentes formules types (toutes avec un <a href="{{ path('accordeon_jazz_manouche') }}">accordéoniste jazz manouche</a> bien sûr !), que vous pouvez modifier à votre guise pour créer votre <strong>orchestre jazz manouche</strong> sur mesure. Bien entendu, nous vous conseillerons en fonction du lieu que vous avez choisi, du nombre de personnes attendues à votre événement et de votre budget.
 			</p>
 
 			<p>
