--- a/templates/pages/musiciens_soirees.html.twig
+++ b/templates/pages/musiciens_soirees.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	Musiciens pour soirées - Avec accordéoniste - Orchestre sur mesure
+	Musiciens pour soirées - Orchestre sur mesure - France entière
 {% endblock %}
 
 {% block metadesc %}
-	<meta name="description" content="Vous cherchez des musiciens pour animer votre mariage, soirée, cocktail ? Jazz manouche, chanson, ... notre orchestre sur mesure se déplace dans toute la France !">
+	<meta name="description" content="Vous cherchez des musiciens pour animer votre mariage, soirée, cocktail ? Jazz manouche, chanson, ... notre orchestre se déplace dans toute la France !">
 {% endblock %}
 
 {% block body %}
@@ -80,10 +80,16 @@
 				</div>
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/_cyzXvBjHkE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/k9SY8saaY3I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
+
+			<h2 class="section-title section-title--small" style="margin-top: 15px;">Orchestre sur mesure</h2>
+
+			<p>
+				Sur cette page, et sur la page <a href="{{ path('animations') }}">dédiée aux animations musicales</a>, nous vous proposons des formations et répertoires à titre d'exemple. Rien n'est figé, et toutes nos prestations musicales se font <strong>sur mesure</strong>. Nous pouvons par exemple venir en trio autour de la chanson française, avec une chanteuse, un accordéoniste et un guitariste. Selon votre budget, ces formules peuvent encore s'enrichir d'autres instrumentistes, menant à des groupes de musiciens plus complets. N'hésitez pas à nous contacter pour en discuter !
+			</p>
         </div>
 		<!-- /.container -->
 	</section>
