--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -33,7 +33,11 @@
 			</p>
 
 			<p>
-				Enfin, les premiers paragraphes que vous pouvez lire sur cette page sont des informations d'ordre général sur votre événement et le style musical jazz manouche ; pour nous entendre / voir directement, et avoir une idée de ce que nous proposons, vous pouvez <a href="#formules">accéder directement à la rubrique en cliquant ici</a>.
+				Enfin, les premiers paragraphes que vous pouvez lire sur cette page sont des informations d'ordre général sur votre événement et le style musical jazz manouche ; pour nous entendre / voir directement, et avoir une idée de ce que nous proposons, vous pouvez cliquer sur le bouton ci-dessous :
+			</p>
+
+			<p>
+				<a href="#formules" class="btn btn-primary">Voir nos formules jazz manouche</a>.
 			</p>
 
 			<h2 class="section-title section-title--small">Votre événement</h2>
