--- a/public/css/main.css
+++ b/public/css/main.css
@@ -401,12 +401,12 @@ a:hover { color: #ff841c; text-decoration: none; }
 @media screen and (min-width: 1000px) {
     .flash {
         position: fixed;
-        height: 100vh;
+        height: 80vh;
     }
 
 	.flash-ghost {
         position: relative;
-		height: 80vh;
+		height: 50vh;
 	}
 
     .flash--limited { height: 80vh; }
@@ -416,7 +416,7 @@ a:hover { color: #ff841c; text-decoration: none; }
     .flash-ghost--blog { height: 10vh; }
 
 	.flash-item__content {
-        margin-top: 150px;
+        margin-top: 50px;
 		display: block;
         position: relative;
 	}
@@ -439,21 +439,40 @@ a:hover { color: #ff841c; text-decoration: none; }
     }
 
     .flash-item__content-title {
-        font-size: 60px;
-    	line-height: 80px;
-        margin: 0 0 31px 0;
-        padding: 34px 0 0;
+        font-size: 30px;
+    	line-height: 60px;
+        /*margin: 0 0 31px 0;
+        padding: 34px 0 0;*/
+		text-align: center;
     }
 
     .flash-item__content-text {
-        font-size: 24px;
-        line-height: 30px;
-        padding: 0 40px 0 0;
-        margin-bottom: 30px;
+        font-size: 20px;
+        line-height: 24px;
+        /*padding: 0 40px 0 0;*/
+		padding: 0 30px;
+		margin-top: 20px;
+        margin-bottom: 20px;
+
+		text-align: justify;
     }
 
     .flash-item__content-btn {
     	font-size: 18px;
     	line-height: 26px;
+		display: block;
+		margin: 0 30px;
     }
 }
+
+.flash-new {
+	position: relative;
+	background-color: #262626;
+	padding: 25px 0;
+}
+
+.flash-item-row .flash-item-col {
+	border-right: 5px solid #ff841c;
+}
+
+.flash-item-row .flash-item-col:last-child { border-right: none; }
