--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -72,6 +72,8 @@
             </script>
 
         {% block canonical %}{% endblock %}
+
+         <script id='pixel-script-poptin' src='https://cdn.popt.in/pixel.js?id=93ba5a01cf9aa' async='true'></script> 
     </head>
 
     <body>
